--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -11,4 +11,11 @@
         android:layout_height="wrap_content"
         android:src="@drawable/logo" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </LinearLayout>
