--- a/res/xml/preference.xml
+++ b/res/xml/preference.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+    <CheckBoxPreference android:summary="ボタン表示のあり／なしを切り替えます" android:defaultValue="false" android:key="button" android:title="ボタン表示"/>
+    <CheckBoxPreference android:summary="バイブレーションのOn/offを切り替えます" android:defaultValue="true" android:key="vibration" android:title="バイブレーション"/>
     
 
 </PreferenceScreen>
